<resources>
    <string name="app_name">Hiscores</string>

    <string name="action_new_score">Nouveau score</string>

    <string name="cover">Cover</string>
    <string name="oneCC">1CC</string>
    <string name="replay">Replay</string>
    <string name="photo">Photo</string>
    <string name="platformPlaceHolder">SUPER NINTENDO</string>
    <string name="modePlaceHolder">Arcade</string>
    <string name="difficultyPlaceHolder">Hard</string>
    <string name="datePlaceHolder">Il y a 2 jours</string>
    <string name="playerPlaceHolder">John Doe</string>
    <string name="gamePlaceHolder">Last Resort</string>
    <string name="scorePlaceHolder">123456 pts</string>
    <string name="stagePlaceHolder">Stage 1</string>
    <string name="rankPlaceHolder">1st</string>
    <string name="shipPlaceHolder">Vic Viper</string>

    <string name="scoreSuffix">pts</string>
    <string name="title_select_game">Select Game</string>
    <string name="title_select_difficulty">Select Difficulty</string>
    <string name="title_select_mode">Select Mode</string>
    <string name="title_select_platform">Select Platform</string>
    <string name="title_select_ship">Select Ship</string>
    <string name="title_select_stage">Select Stage</string>
    <string name="stagePrefix">Stage</string>
    <string name="scoreHint">123.456</string>
    <string name="title_enter_score">Enter Score</string>
    <string name="commentHint">Précisions éventuelles (autofire...)</string>
</resources>
