<?xml version="1.0" encoding="utf-8"?>
<com.shmup.hiscores.scores.view.ScoreCardItemView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="20dp"
    android:background="@android:color/white"
    android:orientation="vertical"
    android:padding="10dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/dateTextView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            tools:text="@string/datePlaceHolder" />

        <TextView
            android:id="@+id/playerTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            tools:text="@string/playerPlaceHolder" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/coverImageView"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:contentDescription="@string/cover"
            android:scaleType="centerCrop" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginStart="10dp"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/gameTextView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    tools:text="@string/gamePlaceHolder" />

                <TextView
                    android:id="@+id/scoreTextView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    tools:text="@string/scorePlaceHolder" />

                <TextView
                    android:id="@+id/stageTextView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    tools:text="@string/stagePlaceHolder" />

            </LinearLayout>

            <TextView
                android:id="@+id/rankTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="50sp"
                android:textStyle="bold"
                tools:text="@string/rankPlaceHolder" />

        </LinearLayout>

    </LinearLayout>

    <org.apmem.tools.layouts.FlowLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp">

        <TextView
            android:id="@+id/modeTextView"
            style="@style/OptionLabel"
            android:layout_marginBottom="@dimen/buttonMargin"
            android:layout_marginEnd="@dimen/buttonMargin"
            android:layout_marginRight="@dimen/buttonMargin"
            android:background="@color/mode"
            tools:text="@string/modePlaceHolder" />

        <TextView
            android:id="@+id/difficultyTextView"
            style="@style/OptionLabel"
            android:layout_marginEnd="@dimen/buttonMargin"
            android:layout_marginRight="@dimen/buttonMargin"
            android:background="@color/difficulty"
            tools:text="@string/difficultyPlaceHolder" />

        <TextView
            android:id="@+id/platformTextView"
            style="@style/OptionLabel"
            android:layout_marginEnd="@dimen/buttonMargin"
            android:layout_marginRight="@dimen/buttonMargin"
            android:background="@color/platform"
            tools:text="@string/platformPlaceHolder" />

        <TextView
            android:id="@+id/photoTextView"
            style="@style/OptionLabel"
            android:layout_marginEnd="@dimen/buttonMargin"
            android:layout_marginRight="@dimen/buttonMargin"
            android:background="@color/photo"
            android:text="@string/photo" />

        <TextView
            android:id="@+id/replayTextView"
            style="@style/OptionLabel"
            android:layout_marginEnd="@dimen/buttonMargin"
            android:layout_marginRight="@dimen/buttonMargin"
            android:background="@color/replay"
            android:text="@string/replay" />

        <TextView
            android:id="@+id/oneccTextView"
            style="@style/OptionLabel"
            android:background="@color/oneCC"
            tools:text="@string/oneCC" />

    </org.apmem.tools.layouts.FlowLayout>
</com.shmup.hiscores.scores.view.ScoreCardItemView>